feat: interfacing with weight sensor

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+.DS_Store
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -106,6 +107,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+env.py
 env/
 venv/
 ENV/
