--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
 bitstring==3.1.7
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
 colorama==0.4.4
 cryptography==3.3.1
 DateTime==4.3
 ecdsa==0.16.1
 esptool==3.0
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 mpfshell==0.9.2
 mpfshell-lite==1.0.2
+network==0.1
 pycparser==2.20
+pymongo==3.11.3
 pyserial==3.5
 python-dotenv==0.15.0
 pytz==2021.1
 reedsolo==1.5.4
+requests==2.25.1
 six==1.15.0
+urllib3==1.26.4
 websocket-client==0.57.0
+Werkzeug==1.0.1
 zope.interface==5.2.0
