--- a/SmartPillowApp/app/src/main/AndroidManifest.xml
+++ b/SmartPillowApp/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.smartpillowapp">
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartPillowApp">
+        android:theme="@style/Theme.SmartPillowApp"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
